# rapiat

./: .coveragerc  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
rapiat/: geometry.py  rapiat.py  util.py
scripts/: align.ipynb  bk.ipynb  meci_clustering.ipynb
tests/: __init__.py  test_geometry.py  test_stub.py
