[project]
name = "rapiat"
description = "rapiat"
license = {file = "LICENSE"}
version = "0.0.1"
readme = "README.md"
keywords = []
authors = [{name = "Roman Ellerbrock"}]
requires-python = ">=3.13"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
rdkit = ">=2025.3.2,<2026"
ase = ">=3.25.0,<4"
numpy = ">=2.2.6,<3"
pytorch = ">=2.7.0,<3"
ipykernel = ">=6.29.5,<7"
py3dmol = ">=2.5.0,<3"
matplotlib = ">=3.10.3,<4"
scikit-learn = ">=1.7.0,<2"
umap-learn = ">=0.5.7,<0.6"
hdbscan = ">=0.8.39,<0.9"

[tool.pixi.pypi-dependencies]
rapiat = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.tasks]
fmt = { cmd="ruff format ." }
lint = { cmd="ruff check . --fix" }
types = { cmd="mypy" }
test = { cmd="pytest" }
all = { depends-on = ["fmt", "lint", "types", "test"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.11"
mypy = ">=1.15"
pre-commit = ">=4.2"

[tool.ruff]
line-length = 100
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "E741",    # Ambiguous variable name (I, l, O) — common in scientific code
    "N802",    # Function name should be lowercase
    "N803",    # Argument name should be lowercase
    "N806",    # Non-lowercase variable in function
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = ["rapiat", "tests"]
strict = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests", "rapiat"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.setuptools.packages.find]
include = ["rapiat*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
